# example

./: .gitignore  README.md
c/: CMakeLists.txt  README.md  main.c  main.h
c/aes/: AES128.c  AES128.h  aes.c  aes.h  aes_example.c  aes_example.h  crc16.c  crc16.h
c/bit/: bit.c  bit.h
c/functions/: led.c  led.h  loop.c  loop.h  motor.c  motor.h
c/hmac_sha256/: hmac_c_example.c  hmac_c_example.h
c/kalman/: filter.c  filter.h
c/ota/: ota.c  ota.h
c/pixart/: Storage1.c  Storage1.h  linkedlist.c  media_combo.c  process_combo.c  process_combo.h
c/sklearn/bayes/: bayes.c  bayes.h
c/sklearn/svc/: svc.c  svc.h
golang/: go.mod
golang/ants/: main.go
golang/context/: main.go
golang/gin/: main.go
golang/hello_algo/search/: main.go
golang/hello_algo/tree/: main.go
golang/hello_algo/tree/array_tree/: array_binary_tree.go
golang/http_example/: main.go
js/: GaussianNB.js
python/: conda_env.yml  main.py  test.xlsx  user_logs.xlsx
python/crypto/: test.py
python/draw/: main.py
python/excel/: excel_parse.py
python/excel/result/: test.xlsx
python/kalman/: filter.py
python/port/: port_serial.py
rust/: Cargo.toml
rust/src/: main.rs
rust/src/crc/: crc16.rs
rust/src/encrypt/: aes128.rs  crc16.rs  hmac_sha256.rs  mod.rs
rust/src/kalman/: filter.rs
rust/src/openai/: chat.rs  crypto.rs  custom_ai.rs  mod.rs
rust/src/os/: mod.rs
rust/src/os/win/: hotkey.rs
rust/src/port/: receive_data.rs
rust/src/touch/: mod.rs
