[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#crc = "3.0.1"
serialport = { git = "https://github.com/serialport/serialport-rs" }
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1"
chrono = "0.4.31"
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
strum = "0.24.0"
strum_macros = "0.24.0"
tokio = { version = "1.17.0", features = ["full"] }
ring = "0.16"
aes="0.8.4"
cbc="0.1.2"
