[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#crc = "3.0.1"
serialport = { git = "https://github.com/serialport/serialport-rs" }
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1"
chrono = "0.4.31"
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
strum = "0.24.0"
strum_macros = "0.24.0"
tokio = { version = "1.17.0", features = ["full"] }
ring = "0.16"
aes="0.8.4"
cbc="0.1.2"
windows-hotkeys = "0.2.1"
async-openai = "0.20.0"
tonic = "0.8"
tokio-stream = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12.0", features = ["json", "stream", "multipart"],default-features = false }
reqwest-eventsource = "0.6.0"
futures = "0.3.26"
secrecy = { version = "0.8.0", features=["serde"] }
bytes = "1.5.0"
sha2 = "0.10.8"
digest = "0.10.7"
#rsa = "0.9.6"
rsa = { version = "0.9.6", features=["sha2"] }
pem = "3.0.4"
rand = "0.8.5"
base64 = "0.22.0"